--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r dotenv/config index.js"
+    "start": "NODE_ENV=development nodemon -r dotenv/config index.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "knex": "^0.16.3",
     "objection": "^1.4.0",
     "pg": "^7.8.0",
+    "require-all": "^3.0.0",
     "slugify": "^1.3.4"
   }
 }
