--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "objection": "^1.4.0",
     "pg": "^7.8.0",
     "require-all": "^3.0.0",
+    "sanitize-html": "^1.20.0",
     "slugify": "^1.3.4"
   }
 }
