--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Api backend for theoryfall.com",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=development mocha test/*.js",
     "start": "NODE_ENV=development nodemon -r dotenv/config index.js"
   },
   "repository": {
@@ -35,5 +35,9 @@
     "require-all": "^3.0.0",
     "sanitize-html": "^1.20.0",
     "slugify": "^1.3.4"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
